实现了登录,注册,找回密码,发送邮件,和邮件验证码的功能

--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -32,7 +32,7 @@
                 </div>
            </form>
         <div class="loginbox-signup">
-            <a href="">忘记密码?</a>
+            <a href="{:url('/admin/sendCode')}">忘记密码?</a>
         </div>
         <div class="loginbox-signup">
             <a href="{:url('/admin/register')}">注册账户</a>
