--- a/application/admin/view/article/add.html
+++ b/application/admin/view/article/add.html
@@ -49,7 +49,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="cate_id" class="control-label col-sm-2">所属导航</label>
+                                        <label for="cate_id" class="control-label col-sm-2">栏目</label>
                                         <div class="col-sm-6">
                                             <select id="cate_id" name="cate_id" class="form-control">
                                                 <option value="">请选择</option>
