--- a/application/admin/view/public/_left.html
+++ b/application/admin/view/public/_left.html
@@ -45,6 +45,12 @@
             </ul>
         </li>
         <li>
+            <a href="{:url('admin/comment/lists')}" class="menu-dropdown">
+                <i class="menu-icon glyphicon glyphicon-list"></i>
+                <span class="menu-text">评论列表</span>
+            </a>
+        </li>
+        <li>
             <a href="#" class="menu-dropdown">
                 <i class="menu-icon glyphicon glyphicon glyphicon-user"></i>
                 <span class="menu-text">会员管理</span>
@@ -83,7 +89,7 @@
             </ul>
         </li>
         <li>
-            <a href="#">
+            <a href="{:url('admin/system/set')}">
                 <i class="menu-icon glyphicon glyphicon-cog"></i>
                 <span class="menu-text">系统设置</span>
             </a>
