--- a/application/index/view/article/info.html
+++ b/application/index/view/article/info.html
@@ -21,11 +21,13 @@
                 <div class="page-header"><b>相关评论</b></div>
                 <div class="comment-content">
                     <form action="#">
+                        <input type="hidden" name="article_id" value="{$articleInfo.id}">
+                        <input type="hidden" name="member_id" value="{:session('index.id')}">
                         <div class="form-group">
-                            <textarea class="form-control" id="comment" name="comment" rows="5" cols=""></textarea>
+                            <textarea class="form-control" id="content" name="content" rows="5" cols=""></textarea>
                         </div>
                         <div class="form-group pull-right">
-                            <button class="btn btn-primary">评论（请认真评论）</button>
+                            <button id="comment" type="submit" class="btn btn-primary">评论（请认真评论）</button>
                         </div>
                     </form>
                 </div>
@@ -54,4 +56,46 @@
         </div>
     </div>
 </div>
+{/block}
+
+{block name="js"}
+<script>
+    $(function () {
+        $('#comment').click(function () {
+            if("{:session('?index.id')}"){
+                $.ajax({
+                    url:"{:url('index/article/comment')}",
+                    type:'post',
+                    data:$('form').serialize(),
+                    dataType:'json',
+                    success:function (data) {
+                        if(data.code == 1){
+                            layer.msg(data.msg,{
+                                icon:6,
+                                time:2000
+                            },function () {
+                                location.href = location.href;
+                            });
+                        }else{
+                            layer.open({
+                                title:'评论失败',
+                                content:data.msg,
+                                icon:5,
+                                anim:6
+                            })
+                        }
+                    }
+                });
+            }else{
+                layer.msg('请先登录',{
+                    icon:5,
+                    time:2000
+                },function () {
+                    location.href = "{:url('index/index/login')}"
+                });
+            }
+            return false;
+        });
+    })
+</script>
 {/block}
