--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12 col-md-8">
-            <div class="page-header h3">文章列表</div>
+            <div class="page-header h3">{$catename|default="文章"}列表</div>
             <div class="article-list">
                 {volist name="articles" id="article"}
                 <div class="article-list-item">
