--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -26,16 +26,23 @@
                 {block name="head"}{/block}
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{:url('index/index/login')}">登录</a></li>
-                <li><a href="{:url('index/index/register')}">注册</a></li>
+                {if session('?index.id')}
+                    <li><a href="#">{:session('index.nickname')}</a></li>
+                    <li><a href="{:url('index/index/out')}">退出</a></li>
+
+                {else /}
+                    <li><a href="{:url('index/index/login')}">登录</a></li>
+                    <li><a href="{:url('index/index/register')}">注册</a></li>
+                {/if}
+
                 <li><a href="#">投稿</a></li>
             </ul>
-            <form action="#" class="navbar-form navbar-right">
+            <form action="{:url('index/index/search')}" class="navbar-form navbar-right">
                 <div class="form-group">
-                    <input type="text" class="form-control input-sm" id="search" name="search" placeholder="搜索" />
+                    <input type="text" class="form-control input-sm" id="search" name="keyword" placeholder="搜索" />
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-default btn-sm">搜索</button>
+                    <button type="submit"  class="btn btn-default btn-sm">搜索</button>
                 </div>
             </form>
         </div>
